--- a/ProfileStyle.css
+++ b/ProfileStyle.css
@@ -1,22 +1,42 @@
 h1 {
     background-color: rgb(75, 4, 4);
-    color:rgb(231, 103, 28);
+    color:rgb(231, 28, 28);
 }
 h2 {
     text-align: center;
 }
 p {
-    background-color: rgb(75, 4, 4);
-    color:rgb(231, 103, 28);
+    background-color: rgb(77, 6, 6);
+    color: rgb(168, 46, 46);
     font-size: 200%;
 }
-.red {
-    color:red;
+.white {
+    color:rgb(239, 180, 180);
 }
 img {
     width:480px;
     float:right;
+    border-radius: 100%;
+    border-style: outset;
+    border-color: rgb(168, 46, 46);
+    border-width: 10px;
 }
 body {
-    background-color: rgb(99, 0, 20);
+    background-color: rgb(106, 3, 24);
+}
+.beef {
+    float:left;
+    height:250px;
+    border-radius: 0%;
+    border-width: 15px;
+    border-color: rgb(168, 46, 46);
+    border-style:outset
+}
+.email {
+    background-color: rgb(168, 46, 46);
+    border: none;
+    color: rgb(45, 1, 1);
+}
+::placeholder {
+    color: rgb(45, 1, 1)
 }
